# cutDB

./: .dockerignore  .env.example  .gitignore  COMMIT_CHECKLIST.md  DEPLOYMENT.md  Dockerfile  PLAN.md  README.md  manage.py  pyproject.toml
cutDB/: urls.py  wsgi.py
cutDB/settings/: base.py  template_settings.py
database/: admin.py  models.py  urls.py  views.py
database/management/commands/: checkGenes.py  count_XY.py  count_exons.py  count_hyp.py  count_hyp_fasta.py  detectFurin.py  detect_ColDomain.py  detect_NPro.py  detect_NProCys.py  dist_NPro-Col.py  exportcDNA.py  import_PFAM.py  import_Philius.py  import_SignalP.py  import_clades.py  import_genes.py  isoforms.py  purify_ColDomain.py  renameCol.py
database/migrations/: 0001_initial.py  0002_auto_20171106_1603.py  0003_auto_20171106_1605.py  0004_project_settings.py  0005_auto_20180223_1609.py  0006_auto_20180223_2042.py  0007_auto_20180312_1213.py  0008_auto_20180312_1242.py  0009_feature_type_domain_list.py  0010_feature_type_pfam_id.py  0011_auto_20180320_2241.py  0012_auto_20180326_1629.py  0013_auto_20180711_0902.py  0014_transcript.py  0015_auto_20180712_1043.py
database/static/database/css/: awesome.ui.fancytree.css  feature-viewer.min.css  pure_customisations.css
database/static/database/input/: collagens.gbk  (+1 more)
database/templates/database/: base.html  clade_detail.html  clades.html  contact.html  domain_detail.html  domains.html  download.html  gene_detail.html  genes.html  index.html  info.html
database/templatetags/: genefilters.py
database_dump/: README.md  dump.sql  mysql_dump_to_sqlite.py
(+11 files in other folders)
